bk_ida/gccida/c2/memrefs_conflict_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:1986:10: error: conflicting types for 'memrefs_conflict_p'
__int64  memrefs_conflict_p( int xsize, rtx x, __int64 ysize, rtx y, __int64 c) 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:92:12: note: previous declaration is here
static int memrefs_conflict_p           PARAMS ((int, rtx, int, rtx,
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:1999:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2002:4: error: expected ';' after expression
rtx v21; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2002:5: error: use of undeclared identifier 'v21'
rtx v21; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2005:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2008:4: error: expected ';' after expression
rtx v27; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2008:5: error: use of undeclared identifier 'v27'
rtx v27; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2023:4: error: expected ';' after expression
rtx v42; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2023:5: error: use of undeclared identifier 'v42'
rtx v42; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2051:11: error: expected ';' after expression
x = ( rtx)v8[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2066:11: error: expected ';' after expression
x = ( rtx)v11[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2072:11: error: expected ';' after expression
x = ( rtx)v7[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2093:11: error: expected ';' after expression
y = ( rtx)v14[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2108:11: error: expected ';' after expression
y = ( rtx)v16[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2114:11: error: expected ';' after expression
y = ( rtx)v12[1]; 
          ^
          ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2144:1: error: use of undeclared identifier 'v21'
v21 = x->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2147:1: error: use of undeclared identifier 'v21'
v21 = ( rtx)x[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2151:1: error: use of undeclared identifier 'v21'
v21 = canon_rtx( x); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/alias.c:2176:1: error: use of undeclared identifier 'v27'
v27 = y->fld[0].rtx; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/memrefs_conflict_p/src/obj/alias.o] Error 1
